tests/grammar/builtins/operator/operator_fail_0/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:2:5
  |
2 | b = 1 + None
  |     ^ unsupported operand type(s) for +: 'int(1)' and 'NoneType'
  |